<resources>
    <string name="app_name">Open Borders</string>
    <string name="border_crossing_url">www.bordercrossinglaw.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello World!</string>
    <string name="welcome_to_open_borders">Welcome To Open Borders</string>
    <string name="the_free_immegration_guide">The free immigration guide. This guide was created by an immigration attorney and former law professor who has represented thousands of clients in the U.S. immigration system.</string>
    <string name="select_language_to_continue">Select Language To Continue</string>
    <string name="welcome_to_border_crossing_law">Please sign in or create an account.</string>
    <string name="Please_create">Create an account.</string>
    <string name="enter_your_details_to_proceed_further">You are welcome to use our guide without signing in, but you must create an account to hire us for services.</string>
    <string name="srn_drawer_open">Open</string>
    <string name="srn_drawer_close">Close</string>
    <string name="srn_ex_no_menu_view">No view for menu provided. You must either call .withMenuView(View) or pass a valid resource id to .withMenuLayout(int)</string>
    <string name="srn_ex_bad_content_view">Your content view must contain exactly one child. Make sure you call inject() after setContentView().</string>
    <string name="spanish">Español</string>
    <string name="email">Email</string>
    <string name="catherine_shaw_gmail_com">catherine.shaw@gmail.com</string>
    <string name="dots">.............................</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="login">Sign In</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_with_terms_and_conditions"><u>Click to review the Terms and Conditions of use.</u></string>
    <string name="i_agree_with_terms_and_conditions_consultation">I will be sent a link to sign an Attorney-Client Contract. I understand that I am not represented by the firm until I sign it.</string>
    <string name="english">English</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="password">Password</string>
    <string name="click_to_verify_or_enter_the_code_below">Please enter the code that was provided in that message:</string>
    <string name="resend_code">Resend Code</string>
    <string name="an_otp_has_been_sent_to">We have sent an e-mail to:</string>
    <string name="verify_code">Verify Code</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="services_history">Orders</string>
    <string name="orders">Orders</string>
    <string name="account_detail">Profile</string>
    <string name="payment_details">Payment Details</string>
    <string name="logout">Sign Out</string>
    <string name="fiancee_visa">Fiancee Visa</string>
    <string name="_1_000_00_every_month_for_2_months">$1,000.00 every month for 2 months</string>
    <string name="view_detail"><u>View Detail>></u></string>
    <string name="october_24_2019"><u>October 24, 2019</u></string>
    <string name="recently_taken_appointments">Recently Taken Appointments</string>
    <string name="start_consultation">Schedule Consultation</string>
    <string name="guide">Guide</string>
    <string name="schedule_consulting">Schedule a Consultation</string>
    <string name="flat_fee_services">Flat Fee Services</string>
    <string name="news">News</string>
    <string name="account">Account</string>
    <string name="select_a_package_to_consultation">Select A Package To Consultation</string>
    <string name="your_information">Your Information</string>
    <string name="first_name">First Name</string>
    <string name="jake">Jake</string>
    <string name="last_name">Last Name</string>
    <string name="smith">Smith</string>
    <string name="jake_gmail_com">jake@gmail.com</string>
    <string name="phone_number">Phone Number</string>
    <string name="address_detail">Address</string>
    <string name="_317_mayer">317 Mayer</string>
    <string name="inglewood">Inglewood</string>
    <string name="street_address">Street Address</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="st_23">st# 23</string>
    <string name="zip_and_postal_code">Zip and Postal Code</string>
    <string name="ca_90301">CA 90301</string>
    <string name="country">Country</string>
    <string name="united_state">United State</string>
    <string name="payment_detail">Payment Detail</string>
    <string name="credit_card_detail">Credit Card Detail</string>
    <string name="_1234_4322_23445">1234 4322 23445</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="_12_2023">12/2023</string>
    <string name="cvc_code">CVC Code</string>
    <string name="cvc">CVC</string>
    <string name="zip_postal_code">Zip/Postal Code</string>
    <string name="done">Done</string>
    <string name="march_30_2020">March 30, 2020</string>
    <string name="know_your_rights_when_dealing_with_law_enforcement">Know Your Rights When Dealing with Law Enforcement</string>
    <string name="it_is_important_for_all_of_us_regardless_of_immigration_status_to_know_how_to_exercise_our_rights_if_we_are_stopped_by_local_police_or_immigration_authorities_we_all_know_that_in_many_parts_of_our_country_there_is_not_a_lot_of_racial_or_ethnic_diversity">It is important for all of us, regardless of immigration status, to know how to exercise our rights if we are stopped by local police or immigration authorities. We all know that in many parts of our country, there is not a lot of racial or ethnic diversity.</string>
    <string name="all_previous_news">All Previous News</string>
    <string name="article_finding_home_um_soccer_coach_s_journey_to_u_s_citizenship">Article: Finding home: UM soccer coach’s journey to U.S. citizenship</string>
    <string name="your_evaluation">Your Evaluation</string>
    <string name="view_your_evaluation">View Your Evaluation</string>
    <string name="the_free_immigration_guide">The free immigration guide.</string>
    <string name="guide_detail">This guide was created by an immigration attorney and former law professor who has represented thousands of clients in the U.S. immigration system. Our immigration laws are highly complex, and the opportunities that you have depend on many important factors. By asking a series of simple questions, this guide will give you a starting point for what you can do to get legal status in the United States.<br /> <br /> We wanted to use our knowledge of immigration law to benefit people around the world, and so we made this guide free to use. However, we strongly believe that legal representation is critical in immigration cases, and do not encourage you to file any immigration applications without the assistance of a qualified attorney.\n\nEven though we provide personalized information based on your answers, this is not legal advice, and we are not yet your attorneys. If at any point you want our help, you can schedule a consultation by phone or video, or hire us for full representation.\n\nYour answers are completely private. We do not save your information on our servers, or see your answers, unless you decide to send them to us. We will never share your information with anyone else without your permission. Please review our Legal Disclaimers and Terms of Use. If you agree with those terms, please click below to get started.</string>
    <string name="news_detail">It is important for all of us, regardless of immigration status, to know how to exercise our rights if we are stopped by local police or immigration authorities.  We all know that in many parts of our country, there is not a lot of racial or ethnic diversity.\n\nThis guide was created by an immigration attorney and former law professor who has represented thousands of clients in the U.S. immigration system. Our immigration laws are highly complex, and the opportunities that you have depend on many important factors. By asking a series of simple questions, this guide will give you a starting point for what you can do to get legal status in the United States.<br /> <br /> We wanted to use our knowledge of immigration law to benefit people around the world, and so we made this guide free to use. However, we strongly believe that legal representation is critical in immigration cases, and do not encourage you to file any immigration applications without the assistance of a qualified attorney.\n\nEven though we provide personalized information based on your answers, this is not legal advice, and we are not yet your attorneys. If at any point you want our help, you can schedule a consultation by phone or video, or hire us for full representation.\n\nYour answers are completely private. We do not save your information on our servers, or see your answers, unless you decide to send them to us. We will never share your information with anyone else without your permission. Please review our Legal Disclaimers and Terms of Use. If you agree with those terms, please click below to get started.</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="_1">1</string>
    <string name="are_you_a_lawful_permanent_resident_of_the_united_states">Are you a lawful permanent resident of the United States?</string>
    <string name="this_means_that_you_have_a_green_card_already">This means that you have a “green card” already.</string>
    <string name="no_i_am_not_a_green_card_holder">No, I am not a green card holder.</string>
    <string name="schedule_a_consultation_now">Schedule a Consultation Now.</string>
    <string name="restart">Restart</string>
    <string name="do_you_want_to_clear_all_your_answers_and_restart_the_guide_from_the_beginning">Are you sure you want to erase your answers and restart the guide?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="previous">Go to previous</string>
    <string name="next">Go to next</string>
    <string name="calendar">Calendar</string>
    <string name="select_date">Select Date</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="select_time">Select Time</string>
    <string name="schedule_a_consultation">Schedule A Consultation</string>
    <string name="phone_call">Phone Call</string>
    <string name="video_call">Video Call</string>
    <string name="select_a_consultation_method">Select a consultation method</string>
    <string name="toast_success">Success</string>
    <string name="toast_error">Error</string>
    <string name="about_us">About Us</string>
    <string name="update_payment">Update Your Payment</string>
    <string name="change_language">Language Preferences</string>
    <string name="are_you_sure_to_logout">Are you sure you want to sign out?</string>
    <string name="immigration_history">Your Immigration History </string>
    <string name="factors_options">Factors Relating to Your Options</string>
    <string name="inadmissibility">Grounds of Inadmissibility</string>
    <string name="quantity">Quantity:</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="you_are_not_signed_in">You are not signed in.</string>
    <string name="please_sign_in_or_create_an_account_to_hire_us_for_services">Please sign in or create an account to hire us for services.</string>
</resources>