<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/popUpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:background="@drawable/guest_popup_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:fontFamily="@font/grotesk_pro_bold"
            android:text="@string/you_are_not_signed_in"
            android:textColor="@color/black_80"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:fontFamily="@font/grotesk_pro_light"
            android:text="@string/please_sign_in_or_create_an_account_to_hire_us_for_services"
            android:textColor="@color/black_80"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_11sdp"
            android:textSize="15sp"
            android:includeFontPadding="false"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/grotesk_pro_normal"
            android:background="@drawable/bg_popup_restart_confirmation"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_11sdp"
            android:background="@drawable/bg_popup_restart_confirmation"
            android:includeFontPadding="false"
            android:textSize="15sp"
            android:fontFamily="@font/grotesk_pro_normal"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/guestButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10ssp"
            android:background="@drawable/drawable_bg_with_border"
            android:fontFamily="@font/grotesk_pro_normal"
            android:text="@string/continue_as_guest"
            android:textColor="@color/brown_new"
            app:cornerRadius="@dimen/_4sdp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>