<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    android:orientation="vertical"
    tools:context=".views.fragments.authentication.login.ChangePasswordFragment">

    <include
        android:id="@+id/auth_toolbar_id"
        layout="@layout/auth_toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:orientation="vertical">


        <com.google.android.material.textview.MaterialTextView
            style="@style/login_text_label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_new_password" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_et"
                style="@style/login_edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/dots"
                android:inputType="textWebPassword" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/eyePassword"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/eye_icon_hide" />

        </FrameLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/errorPassword_tv"
            style="@style/style_error_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/login_text_label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_new_password" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_et"
                style="@style/login_edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dots"
                android:inputType="textWebPassword" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/confirm_password_eye"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/eye_icon_hide" />
        </FrameLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/errorConfirmPassword_tv"
            style="@style/style_error_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset_btn_id"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_10ssp"
        android:text="@string/reset_password"
        app:cornerRadius="@dimen/_4sdp" />


</LinearLayout>