<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/popUpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/popup_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/grotesk_pro_light"
            android:text="@string/do_you_want_to_clear_all_your_answers_and_restart_the_guide_from_the_beginning"
            android:textColor="@color/black_80"
            android:textSize="17sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_popup_restart_confirmation"
            android:backgroundTint="@color/black"
            android:paddingVertical="@dimen/_15sdp"
            android:text="@string/yes"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btnNo"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"

            />

        <TextView
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_popup_restart_confirmation"
            android:paddingVertical="@dimen/_15sdp"
            android:text="@string/no"
            android:layout_marginEnd="@dimen/_15sdp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toBottomOf="@id/btnYes"
            app:layout_constraintLeft_toRightOf="@id/btnYes"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnYes" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>