<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_5sdp"
    android:backgroundTint="@color/service_news_tab_color"
    app:strokeColor="@color/brown_new_min"
    app:strokeWidth="1dp"
    android:elevation="0dp"
    app:cardCornerRadius="@dimen/_4sdp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="false">

    <RelativeLayout
        android:id="@+id/packagesLayoutId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical">

        <com.rishabhharit.roundedimageview.RoundedImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:scaleType="centerCrop"
            android:transitionName="flatImage"
            app:cornerRadius="@dimen/_4sdp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/imageView"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:ellipsize="end"
                android:fontFamily="@font/grotesk_pro_normal"
                android:maxLines="2"
                android:text="@string/fiancee_visa"
                android:textColor="@color/brown_new_min"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/amount_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:fontFamily="@font/grotesk_pro_normal"
                android:text="@string/_1_000_00_every_month_for_2_months"
                android:textColor="@color/brown_new_min"
                android:textSize="12sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/viewDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_3sdp"
            android:text="@string/view_detail"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:textColor="@color/view_detail_color"
            android:textSize="12sp"
            tools:ignore="RtlSymmetry" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>