<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    android:orientation="vertical"
    tools:context=".views.activities.selectLanguage.SelectLanguageActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_back"
                android:visibility="gone" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/ic_splash_logo" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/grotesk_pro_normal"
                android:text="@string/welcome_to_open_borders"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/grotesk_pro_light"
                android:gravity="center"
                android:text="@string/the_free_immegration_guide"
                android:textColor="@color/black_80"
                android:textSize="14sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:fontFamily="@font/grotesk_pro_light"
                android:gravity="center"
                android:text="@string/select_language_to_continue"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_icons">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/eglishSelectionIV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_language_selection"
                        android:visibility="gone" />

                    <LinearLayout
                        android:id="@+id/english_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical"
                        android:padding="@dimen/_10sdp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginVertical="@dimen/_10sdp"
                            android:src="@drawable/ic_uk_flag" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:fontFamily="@font/grotesk_pro_normal"
                            android:text="@string/english"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_icons">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/spanishSelectionIV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_language_selection"
                        android:visibility="gone" />

                    <LinearLayout
                        android:id="@+id/spanish_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical"
                        android:padding="@dimen/_10sdp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="@dimen/_10sdp"
                            android:src="@drawable/ic_spain_flag" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:fontFamily="@font/grotesk_pro_normal"
                            android:text="@string/spanish"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp"
                android:gravity="center_horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:fontFamily="@font/grotesk_pro_light"
                    android:text="@string/border_crossing_url"
                    android:textColor="@color/black_80"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>